--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <button class="btn" id="toMemories">Let's See ➡️</button>
       </div>
     </div>
-    <div style="position:absolute;left:20px;bottom:24px;color:rgba(255,255,255,0.6);font-size:13px;z-index:11">Tip: Use headphones for a soft background track (optional)</div>
+    <div style="position:absolute;left:20px;bottom:24px;color:rgba(255,255,255,0.6);font-size:13px;z-index:11">without music </div>
   </div>
 
   <!-- PAGE 2: Memories (balloons) -->
@@ -273,3 +273,4 @@
   </script>
 </body>
 </html>
+
